trunk/Archive2/60/611a35a841df5b/output
+ clang++ -O0 -Wall -Wextra -Wconversion -pedantic -Wno-unused-variable -Wno-unused-parameter -std=c++1y -pthread main.cpp
main.cpp:16:20: error: read-only variable is not assignable
            bar->x = 42;
            ~~~~~~ ^
1 error generated.
